@@ -1,3 +1,8 @@
+2006-06-01  Katsutoshi Itoh <cut-sea@kahua.org>
+
+	* bug fix for realize of kahua-proxy.
+	  support dot pair.
+
 2006-05-24  Katsutoshi Itoh <cut-sea@kahua.org>
 
 	* src/kahua/server.scm
